// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrilldownMenu Component Snapshots matches snapshot for basic menu 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <button
    aria-controls="radix-_r_2m_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-state="open"
    id="radix-_r_2l_"
    type="button"
  >
    <button
      class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-secondary hover:bg-primary/90 active:bg-GRAY_950 disabled:bg-GRAY_100 disabled:text-GRAY_700 disabled:cursor-not-allowed h-10 py-3 px-4 f-14-500"
    >
      Open Menu
    </button>
  </button>
</div>
`;

exports[`DrilldownMenu Component Snapshots matches snapshot for menu with icons and descriptions 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <button
    aria-controls="radix-_r_2r_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-state="open"
    id="radix-_r_2q_"
    type="button"
  >
    <button
      class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-secondary hover:bg-primary/90 active:bg-GRAY_950 disabled:bg-GRAY_100 disabled:text-GRAY_700 disabled:cursor-not-allowed h-10 py-3 px-4 f-14-500"
    >
      Open Menu
    </button>
  </button>
</div>
`;
